--- a/styles.css
+++ b/styles.css
@@ -597,20 +597,20 @@ html, body {
     margin-top: 40px;
     border: 5px solid #1CB698;
     display: block;
-    width: 50%;
+    width: 80%;
     margin: auto;
     border-radius: 80%;
 }
-
+/*
 .contacto .col .info{
     position: absolute;
     top: 50%;
-    background-color: #252A2E;
+    background-color: black;
     padding: 20px;
     
     left: 50%;
     transform: translate(-50%, -50%);
-}
+}*/
 .contacto .col .info ul{
     list-style: none;
 }
