--- a/styles.css
+++ b/styles.css
@@ -597,9 +597,9 @@ html, body {
     margin-top: 40px;
     border: 5px solid #1CB698;
     display: block;
-    width: 80%;
+    width: 60%;
     margin: auto;
-    border-radius: 80%;
+    border-radius: 40px 0 40px 0;
 }
 /*
 .contacto .col .info{
